# Customer_Support_Intent_Classifier

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  app.py  build_product_collections.py  main_notebook.ipynb  pyproject.toml  requirements.txt
dataset/: output_df_exploded.xlsx
emb_collection/: chroma.sqlite3
src/: utils.py
tests/: test_app.py
